UPDATE: please fix the bugs

--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Mern Demo",
   "main": "server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run prod || npm run dev",
-    "prod": "node server.js",
-    "dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
-    "install": "cd client && npm install",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+
+    "client": "npm start --prefix client",
+    "dev" : "concurrently \"nodemon server.js\" \"npm run client\"",
+
+    "install" : "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild":"npm run build"
   },
   "author": "",
   "license": "ISC",
